Separated routing into components and added controllers for both states.
Signed-off-by: th3Dot <chaosikcz@gmail.com>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "files" :
     [
       "src/Controllers/MainCtrl.ts",
+      "src/Controllers/LoginCtrl.ts",
       "src/Application.ts"
     ],
 
